@@ -1,3 +1,8 @@
+2005-05-17  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/dh-gecko-utils.cpp:
+	- Use pango API to split font string. Fixes bug #304428.
+
 2005-05-08  Mikael Hallendal  <micke@imendio.com>
 
 	* Release 0.10
